# agentic_sql_assistant_using_skills

./: .dockerignore  .env.example  Dockerfile.api  README.md  docker-compose.yml  main.py  package-lock.json  pyproject.toml
scripts/: generate_data.py
src/sql_assistant/: agent.py  api.py  config.py  database.py  main.py
src/sql_assistant/skills/: repository.py
src/sql_assistant/skills/inventory_management/: content.md  description.txt
src/sql_assistant/skills/sales_analytics/: content.md  description.txt
tests/: test_core.py  verify_agent.py
web-app/: Dockerfile.web  index.html  package-lock.json  package.json
web-app/src/: App.jsx  index.css
